// Copyright 2026 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/internal/kingdom/client_account.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Internal service for persistence of ClientAccount entities.
service ClientAccounts {
  rpc CreateClientAccount(CreateClientAccountRequest) returns (ClientAccount);

  rpc GetClientAccount(GetClientAccountRequest) returns (ClientAccount);

  rpc DeleteClientAccount(DeleteClientAccountRequest) returns (ClientAccount);

  rpc StreamClientAccounts(StreamClientAccountsRequest)
      returns (stream ClientAccount);
}

message CreateClientAccountRequest {
  ClientAccount client_account = 1;
}

message GetClientAccountRequest {
  // External ID of the parent. Required.
  oneof external_parent_id {
    fixed64 external_measurement_consumer_id = 1;
    fixed64 external_data_provider_id = 3;
  }
  // External ID of the ClientAccount. Required.
  fixed64 external_client_account_id = 2;
}

message DeleteClientAccountRequest {
  // External ID of the parent. Required.
  oneof external_parent_id {
    fixed64 external_measurement_consumer_id = 1;
    fixed64 external_data_provider_id = 3;
  }
  // External ID of the ClientAccount. Required.
  fixed64 external_client_account_id = 2;
}

message StreamClientAccountsRequest {
  message AfterFilter {
    fixed64 external_measurement_consumer_id = 1;
    fixed64 external_client_account_id = 2;
    google.protobuf.Timestamp create_time = 3;
  }

  message Filter {
    fixed64 external_measurement_consumer_id = 1;
    fixed64 external_data_provider_id = 2;
    string client_account_reference_id = 3;
    AfterFilter after = 4;
  }
  Filter filter = 1;

  // The maximum number of results to return. If not specified or 0, it implies
  // unlimited.
  int32 limit = 2;
}
